<resources>
    <string name="app_name">Kim_J-Project2</string>
    <string name="sign_up_register">Sign Up/Register</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="signup">Sign Up</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="add_expense">Add Expense</string>
    <string name="expense_list">Expense List</string>
    <string name="current_budget">Current Budget:</string>
    <string name="total_expenses">Total Expenses:</string>
    <string name="remaining_balances">Remaining Balances:</string>
    <string name="save_expense">Save</string>
    <string name="name">Name</string>
    <string name="dollar_sign">0.00</string>
    <string name="expense_name">Expense Name</string>
    <string name="amount">Amount</string>
    <string name="input_budget">Input Budget</string>
    <string name="update_expense">Update Expense</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="_0_00">0.00</string>
    <string name="textview">TextView</string>
</resources>