<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="66dp"
        android:text="@string/sign_up_register"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="362dp"
        android:layout_height="160dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="82dp"
        android:background="#E9EEF2"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/userInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <EditText
            android:id="@+id/pwInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="209dp"
        android:backgroundTint="#E8EDF1"
        android:onClick="checkRegister"
        android:text="@string/sign_up"
        android:textColor="#49454F"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="143dp"
        android:text="@string/log_in"
        android:backgroundTint="#E8EDF1"
        android:textColor="#49454F"
        android:textStyle="bold"
        android:onClick="checkLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton" />

</androidx.constraintlayout.widget.ConstraintLayout>